# esp32_c6_Iot

./: .gitignore  .gitmodules  CLAUDE.md  README.md  compile.sh  flash.sh  justfile  sdkconfig.defaults  secrets.h.example
components/led/: led.c  led.h
components/serial/: serial.c  serial.h
components/servo/: servo.h
components/wifi/: CMakeLists.txt  wifi.c
docs/: MATTER_SMARTTHINGS_PLAN.md  SETUP.md
lib/led/: led.c  led.h
lib/serial/: CMakeLists.txt  serial.c  serial.h
lib/servo/: servo.c
lib/strip/: CMakeLists.txt  strip.c  strip.h  strip_fx.c  strip_fx.h
lib/sysinfo/: CMakeLists.txt  sysinfo.c  sysinfo.h
lib/web/: CMakeLists.txt  web.c  web.h
lib/wifi/: wifi.h
targets/blink/: CMakeLists.txt
targets/blink/main/: CMakeLists.txt  main.c
targets/matter_strip/: CMakeLists.txt
targets/matter_strip/main/: CMakeLists.txt  main.cpp
targets/sweep/: CMakeLists.txt
targets/sweep/main/: CMakeLists.txt  main.c
targets/unit_test/: CMakeLists.txt  README.md
targets/unit_test/main/: CMakeLists.txt  main.c  test_led.c  test_strip.c  test_sysinfo.c  test_wifi.c  tests.h
targets/webserver/: CMakeLists.txt
targets/webserver/main/: CMakeLists.txt  index.html  main.c
test/host/: Makefile  README.md  test_web_form.c
test/host/stubs/: esp_http_server.h  stubs.c
